[package]
authors = ["stevemolitor <stevemolitor314@gmail.com>"]
description = "print current time for friends in their time zone"
documentation = "https://github.com/stevemolitor314/what-time"
edition = "2018"
homepage = "https://github.com/stevemolitor314/what-time"
license = "MIT"
name = "what-time"
readme = "README.md"
repository = "https://github.com/stevemolitor314/what-time"
version = "0.2.0"

[dependencies]
chrono = "0.4.19"
chrono-tz = "0.5.3"
clap = "2.33.3"
reqwest = { version = "0.11.2", features = [ "blocking"] }
thiserror = "1.0.24"
